# reso_dd

./: Cargo.toml  README.md
reso_dd/: Cargo.toml  README.md
reso_dd/src/: comma_delimited.rs  generated.rs  lib.rs  reso_enumeration.rs
reso_dd_generator/: Cargo.toml
reso_dd_generator/src/: case.rs  dtd.rs  generate.rs  main.rs
